lbdb (0.24) unstable; urgency=low

  * Add new module m_bbdb to access a (X)Emacs big brother database (bbdb)
    from lbdb using (x)emacs as the backend.  Thanks to Utz-Uwe Haus
    <haus@uuhaus.de> for providing this.
  * s/MODULE_PATH/MODULES_PATH/ in documentation to match the behavior of
    the program (Closes: #83933).

 --

lbdb (0.23) unstable; urgency=low

  * Add a second grep to m_pgp5 and m_gpg to remove UIDs, which don't
    match the search string, but are only generated, because a different
    UID of this key matches.
  * Add new module m_gnomecard based on an idea by Rick Frankel 
    <rick@rickster.com>.
  * Always use /bin/sh as the shell on Debian systems, because Debian
    guarantees, that /bin/sh is a posix shell (Closes: #75475).
  * Move /usr/share/doc/lbdb/override.Lintian to
    /usr/share/lintian/overrides/lbdb.
  * Add $(install_prefix) to Makefile.in and change debian/rules to use
    it.  Thanks to Rob Payne <rnspayne@adelphia.net> for providing the
    idea and a patch.
  * Update lbdb.spec.in, patch provided by Rob Payne
    <rnspayne@adelphia.net>.
  * Remove dh_suidregister from debian/rules.
  * Update Debian package description.
  * Upgrade lbdb.el to version 1.9 (Thanks Dave!).

 -- Roland Rosenfeld <roland@debian.org>  Tue, 23 Jan 2001 18:33:45 +0100

lbdb (0.22) unstable; urgency=low

  * Add new module m_addr_email to request data from addressbook program
    (http://red.roses.de/~clemens/addressbook/) by Torsten Jerzembeck
    <toje@nightingale.ms.sub.org>.
  * Some optimizations on m_addr_email to handle city name correct and to
    junk entries without email address.
  * Update lbdb.el to version 1.8:
    - Fixes the problem with spaces in query strings (Closes: #74818).
    - New commands lbdb-region and lbdb-maybe-region to query lbdb for the
      content of the current region.
    - Autoload lbdb-region and lbdb-maybe-region from startup file.
  * Use sort without -u option, because duplicates are already removed by