@@ -27,9 +27,14 @@ m_gpg_query()
 
     if [ -x "$GPG" ]
     then
-	$GPG --list-keys --with-colons "$@" 2>/dev/null \
-	| grep '^\(pub\|uid\):\([^:]*:\)\{8,8\}[^<>:]* <[^<>@: ]*@[^<>@: ]*>[^<>@:]*:' \
-	| sed -e 's/^\([^:]*:\)\{9,9\}\([^<:]*\) <\([^>:]*\)>.*:.*$/\3	\2	(GnuPG)/' \
+#	$GPG --list-keys --with-colons "$@" 2>/dev/null \
+#	| grep '^\(pub\|uid\):\([^:]*:\)\{8,8\}[^<>:]* <[^<>@: ]*@[^<>@: ]*>[^<>@:]*:' \
+#	| sed -e 's/^\([^:]*:\)\{9,9\}\([^<:]*\) <\([^>:]*\)>.*:.*$/\3	\2	(GnuPG)/' \
+#	| sed -e 's/	\([^	]\{27,27\}\)[^	]*	/	\1...	/' \
+#	| grep -i "$@"
+	$GPG --list-keys --no-greeting "$@" 2>/dev/null \
+	| grep '^\(pub\|uid\)  .\{25,25\} [^<>]* <[^<>@ ]*@[^<>@ ]*>' \
+	| sed -e 's/^.\{24,31\}\([^<]*\) <\([^>]*\)>.*$/\2	\1	(GnuPG)/' \
 	| sed -e 's/	\([^	]\{27,27\}\)[^	]*	/	\1...	/' \
 	| grep -i "$@"
     fi
